correcting hr tag

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <source src="music/Maryan.mpeg" type="audio/mpeg">
             </audio>
             <p>kadal Raasa Naan - Maryan</p>
-            <p>Yuvan shankar raja - 2013</p>
+            <p>Yuvan shankar raja (2013)</p>
             <hr>
             <audio controls>
                 <source src="music/BakaMitai.mpeg" type="audio/mpeg">
             </audio>
-            <p>Baka mitai - 2020</p>
-            <p>Kazuma Kiryu(Takaya Kuroda)</p>
+            <p>Baka mitai - Deep Fake</p>
+            <p>Kazuma Kiryu (2020)</p>
             <hr>
             <audio controls>
                 <source src="music/padmaavat.mpeg" type="audio/mpeg">
