--- a/index.html
+++ b/index.html
@@ -1,62 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ISAI Playlist</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <header id="header">
-        <nav>
-            <img class="logo" src="logo/isai.png" alt="logo">
-        </nav>
+      <nav>
+        <img class="logo" src="logo/isai.png" alt="logo" />
+      </nav>
     </header>
 
     <section id="music-app">
-        <div id="root1">
-            <audio controls>
-                <source src="music/Maryan.mpeg" type="audio/mpeg">
-            </audio>
-            <p>kadal Raasa Naan - Maryan</p>
-            <p>Yuvan shankar raja (2013)</p>
-            <hr>
-            <audio controls>
-                <source src="music/BakaMitai.mpeg" type="audio/mpeg">
-            </audio>
-            <p>Baka mitai - Deep Fake</p>
-            <p>Kazuma Kiryu (2020)</p>
-            <hr>
-            <audio controls>
-                <source src="music/padmaavat.mpeg" type="audio/mpeg">
-            </audio>
-            <p>Karaipurandoadudhey Kanaa - Padmavat</p>
-            <p>Divya Kumar (2018) </p>
-            <hr>
-            <audio controls>
-                <source src="music/Lalala.mpeg" type="audio/mpeg">
-            </audio>
-            <p>La la la - Naughty Boy </p>
-            <p>Sam smith (2006)</p>
-            <hr>
-            <audio controls>
-                <source src="music/Aurora.mpeg" type="audio/mpeg">
-            </audio>
-            <p>AURORA - Runaway</p>
-            <p>Aurora Aksnes (2015)</p>
-            <hr>
-            <audio controls>
-                <source src="music/heyram.mpeg" type="audio/mpeg">
-            </audio>
-            <p>Isaiyil Thodanguthamma - Heyram</p>
-            <p>Illayaraja (2000)</p>
-            
-        </div>
+      <div id="root1">
+        <audio controls>
+          <source src="music/Maryan.mpeg" type="audio/mpeg" />
+        </audio>
+        <p>kadal Raasa Naan - Maryan</p>
+        <p>Yuvan shankar raja (2013)</p>
+        <hr />
+        <audio controls>
+          <source src="music/BakaMitai.mpeg" type="audio/mpeg" />
+        </audio>
+        <p>Baka mitai - Deep Fake</p>
+        <p>Kazuma Kiryu (2020)</p>
+        <hr />
+        <audio controls>
+          <source src="music/padmaavat.mpeg" type="audio/mpeg" />
+        </audio>
+        <p>Karaipurandoadudhey Kanaa - Padmavat</p>
+        <p>Divya Kumar (2018)</p>
+        <hr />
+        <audio controls>
+          <source src="music/Lalala.mpeg" type="audio/mpeg" />
+        </audio>
+        <p>La la la - Naughty Boy</p>
+        <p>Sam smith (2006)</p>
+        <hr />
+        <audio controls>
+          <source src="music/Aurora.mpeg" type="audio/mpeg" />
+        </audio>
+        <p>AURORA - Runaway</p>
+        <p>Aurora Aksnes (2015)</p>
+        <hr />
+        <audio controls>
+          <source src="music/heyram.mpeg" type="audio/mpeg" />
+        </audio>
+        <p>Isaiyil Thodanguthamma - Heyram</p>
+        <p>Illayaraja (2000)</p>
+      </div>
     </section>
-    <footer id="footer">
-        Made with 	
-        &#128420; by Noobie
-    </footer>
-</body>
+    <footer id="footer">Made with &#128420; by Noobie</footer>
+  </body>
 </html>
