Compress audio file size

--- a/index.html
+++ b/index.html
@@ -17,37 +17,37 @@
     <section id="music-app">
       <div id="root1">
         <audio controls>
-          <source src="music/Maryan.mpeg" type="audio/mpeg" />
+          <source src="music/Maryan.mp3" type="audio/mpeg" />
         </audio>
         <p>kadal Raasa Naan - Maryan</p>
         <p>Yuvan shankar raja (2013)</p>
         <hr />
         <audio controls>
-          <source src="music/BakaMitai.mpeg" type="audio/mpeg" />
+          <source src="music/BakaMitai.mp3" type="audio/mpeg" />
         </audio>
         <p>Baka mitai - Deep Fake</p>
         <p>Kazuma Kiryu (2020)</p>
         <hr />
         <audio controls>
-          <source src="music/padmaavat.mpeg" type="audio/mpeg" />
+          <source src="music/padmaavat.mp3" type="audio/mpeg" />
         </audio>
         <p>Karaipurandoadudhey Kanaa - Padmavat</p>
         <p>Divya Kumar (2018)</p>
         <hr />
         <audio controls>
-          <source src="music/Lalala.mpeg" type="audio/mpeg" />
+          <source src="music/Lalala.mp3" type="audio/mpeg" />
         </audio>
         <p>La la la - Naughty Boy</p>
         <p>Sam smith (2006)</p>
         <hr />
         <audio controls>
-          <source src="music/Aurora.mpeg" type="audio/mpeg" />
+          <source src="music/Aurora.mp3" type="audio/mpeg" />
         </audio>
         <p>AURORA - Runaway</p>
         <p>Aurora Aksnes (2015)</p>
         <hr />
         <audio controls>
-          <source src="music/heyram.mpeg" type="audio/mpeg" />
+          <source src="music/heyram.mp3" type="audio/mpeg" />
         </audio>
         <p>Isaiyil Thodanguthamma - Heyram</p>
         <p>Illayaraja (2000)</p>
